feat: add comprehensive Top-K label analysis
- Test 5 different K values: 100, 50, 20, 10, 5
- Train separate model for each K
- Generate CSV with all metrics comparison
- Create 4-plot visualization:
  * F1 score vs label count
  * Precision-Recall trade-off scatter
  * Recall@5 bar chart
  * All metrics grouped comparison
- Save PNG histogram at 300 DPI
- Integrates with results comparison

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -718,11 +718,22 @@
    "id": "276748ea",
    "metadata": {},
    "source": [
-    "### Strategy 5: Top-100 Labels Subset\n",
+    "### Strategy 5: Top-K Label Analysis (5, 10, 20, 50, 100)\n",
     "\n",
-    "**Açıklama:** Sadece en sık 100 label ile eğitim. Model'in öğrenme kapasitesini test etmek için.\n",
+    "**Açıklama:** 5 farklı K değeri ile model kapasitesini test eder. Her K için baseline BCE kullanır.\n",
     "\n",
-    "**Önerilen Kullanım:** Tüm stratejiler başarısız olursa, modelin genel öğrenme kabiliyetini kontrol etmek için deneyin."
+    "**Test Edilen K Değerleri:**\n",
+    "- Top-100: Geniş label seti\n",
+    "- Top-50: Orta seviye\n",
+    "- Top-20: Küçük label seti\n",
+    "- Top-10: Minimal label seti\n",
+    "- Top-5: En küçük subset\n",
+    "\n",
+    "**Çıktılar:**\n",
+    "- CSV dosyası: Tüm metriklerin karşılaştırması\n",
+    "- 4 grafikli histogram: F1 vs K, Precision-Recall, Recall@5, All Metrics\n",
+    "\n",
+    "**Önerilen Kullanım:** Model'in farklı label sayılarındaki performansını görmek için çalıştırın (~2-2.5 saat)."
    ]
   },
   {
@@ -732,87 +743,194 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strategy_name = \"subset_100\"\n",
+    "# Top-K Label Analysis: Test model capacity with different label subset sizes\n",
     "print(f\"\\n{'='*60}\")\n",
-    "print(f\"🧪 STRATEGY 5: Top-100 Labels\")\n",
+    "print(f\"🧪 TOP-K LABEL ANALYSIS\")\n",
     "print(f\"{'='*60}\\n\")\n",
     "\n",
-    "# Get strategy configuration\n",
-    "strategy_config = get_strategy_config(\n",
-    "    strategy_name=strategy_name,\n",
-    "    train_dataset=data['train_dataset'],\n",
-    "    num_labels=num_labels,\n",
-    "    label_list=label_names\n",
-    ")\n",
+    "from src.strategies import filter_top_k_labels\n",
     "\n",
-    "# Create DataLoader\n",
-    "if strategy_config['custom_dataloader'] is not None:\n",
-    "    strategy_train_dataloader = strategy_config['custom_dataloader'](BASE_CONFIG['batch_size'])\n",
-    "else:\n",
-    "    strategy_train_dataloader = DataLoader(\n",
-    "        strategy_config['dataset'],\n",
+    "# Test different K values\n",
+    "k_values = [100, 50, 20, 10, 5]\n",
+    "topk_results = {}\n",
+    "\n",
+    "for k in k_values:\n",
+    "    print(f\"\\n{'='*60}\")\n",
+    "    print(f\"🔬 Testing Top-{k} Labels\")\n",
+    "    print(f\"{'='*60}\\n\")\n",
+    "    \n",
+    "    # Filter dataset to top-k labels\n",
+    "    filtered_train_ds, filtered_label_list, label_mapping = filter_top_k_labels(\n",
+    "        data['train_dataset'], \n",
+    "        label_names, \n",
+    "        k=k\n",
+    "    )\n",
+    "    filtered_test_ds, _, _ = filter_top_k_labels(\n",
+    "        data['test_dataset'], \n",
+    "        label_names, \n",
+    "        k=k\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"📊 Dataset Statistics:\")\n",
+    "    print(f\"   Top-{k} labels selected\")\n",
+    "    print(f\"   Train samples: {len(filtered_train_ds)}\")\n",
+    "    print(f\"   Test samples: {len(filtered_test_ds)}\")\n",
+    "    print(f\"   Labels: {filtered_label_list[:5]}...\")\n",
+    "    \n",
+    "    # Create dataloaders\n",
+    "    topk_train_loader = DataLoader(\n",
+    "        filtered_train_ds,\n",
     "        batch_size=BASE_CONFIG['batch_size'],\n",
     "        shuffle=True\n",
     "    )\n",
+    "    topk_test_loader = DataLoader(\n",
+    "        filtered_test_ds,\n",
+    "        batch_size=BASE_CONFIG['batch_size'],\n",
+    "        shuffle=False\n",
+    "    )\n",
+    "    \n",
+    "    # Load model for this K\n",
+    "    print(f\"\\n🔧 Loading model for {k} labels...\")\n",
+    "    topk_model = load_model(\n",
+    "        model_name=BASE_CONFIG['model_name'],\n",
+    "        num_labels=k,\n",
+    "        device=BASE_CONFIG['device'],\n",
+    "        use_focal_loss=False,\n",
+    "        pos_weight=None\n",
+    "    )\n",
+    "    \n",
+    "    # Train model\n",
+    "    print(f\"\\n🚀 Training on Top-{k}...\")\n",
+    "    topk_history = train_model(\n",
+    "        model=topk_model,\n",
+    "        train_dataloader=topk_train_loader,\n",
+    "        num_epochs=BASE_CONFIG['num_epochs'],\n",
+    "        learning_rate=BASE_CONFIG['learning_rate'],\n",
+    "        device=BASE_CONFIG['device']\n",
+    "    )\n",
+    "    \n",
+    "    # Evaluate model\n",
+    "    print(f\"\\n📊 Evaluating Top-{k}...\")\n",
+    "    topk_test_results = evaluate_model(\n",
+    "        model=topk_model,\n",
+    "        test_dataloader=topk_test_loader,\n",
+    "        label_names=filtered_label_list,\n",
+    "        device=BASE_CONFIG['device']\n",
+    "    )\n",
+    "    \n",
+    "    # Store results\n",
+    "    topk_results[f'top_{k}'] = {\n",
+    "        'k': k,\n",
+    "        'num_train': len(filtered_train_ds),\n",
+    "        'num_test': len(filtered_test_ds),\n",
+    "        'metrics': topk_test_results,\n",
+    "        'labels': filtered_label_list\n",
+    "    }\n",
+    "    \n",
+    "    # Display results\n",
+    "    print(f\"\\n✅ Top-{k} Results:\")\n",
+    "    for metric, value in topk_test_results.items():\n",
+    "        if isinstance(value, (int, float)):\n",
+    "            print(f\"   {metric}: {value:.4f}\")\n",
     "\n",
-    "print(\"📋 Konfigürasyon:\")\n",
-    "print(f\"   Strategy: {strategy_config['name']}\")\n",
-    "print(f\"   Description: {strategy_config['description']}\")\n",
-    "print(f\"   Num labels: {strategy_config['num_labels']}\")\n",
-    "print(f\"   Focal loss: {strategy_config['use_focal_loss']}\")\n",
+    "# Create comparison DataFrame\n",
+    "print(f\"\\n{'='*60}\")\n",
+    "print(f\"📊 TOP-K COMPARISON TABLE\")\n",
+    "print(f\"{'='*60}\\n\")\n",
     "\n",
-    "# Load model\n",
-    "print(\"\\n🔧 Model yükleniyor...\")\n",
-    "model = load_model(\n",
-    "    model_name=BASE_CONFIG['model_name'],\n",
-    "    num_labels=strategy_config['num_labels'],\n",
-    "    device=BASE_CONFIG['device'],\n",
-    "    use_focal_loss=strategy_config['use_focal_loss'],\n",
-    "    focal_alpha=strategy_config.get('focal_alpha', 0.25),\n",
-    "    focal_gamma=strategy_config.get('focal_gamma', 2.0),\n",
-    "    pos_weight=strategy_config['pos_weight']\n",
-    ")\n",
+    "topk_comparison = []\n",
+    "for key, data in topk_results.items():\n",
+    "    metrics = data['metrics']\n",
+    "    topk_comparison.append({\n",
+    "        'K': data['k'],\n",
+    "        'Train Samples': data['num_train'],\n",
+    "        'Test Samples': data['num_test'],\n",
+    "        'Micro F1': metrics.get('micro_f1', 0),\n",
+    "        'Micro Precision': metrics.get('micro_precision', 0),\n",
+    "        'Micro Recall': metrics.get('micro_recall', 0),\n",
+    "        'Recall@5': metrics.get('recall_at_5', 0),\n",
+    "        'Precision@5': metrics.get('precision_at_5', 0)\n",
+    "    })\n",
     "\n",
-    "# Train model\n",
-    "print(\"\\n🚀 Eğitim başlıyor...\")\n",
-    "training_history = train_model(\n",
-    "    model=model,\n",
-    "    train_dataloader=strategy_train_dataloader,\n",
-    "    num_epochs=BASE_CONFIG['num_epochs'],\n",
-    "    learning_rate=BASE_CONFIG['learning_rate'],\n",
-    "    device=BASE_CONFIG['device']\n",
-    ")\n",
+    "df_topk = pd.DataFrame(topk_comparison)\n",
+    "df_topk = df_topk.sort_values('K', ascending=False)\n",
+    "print(df_topk.to_string(index=False))\n",
     "\n",
-    "# Evaluate model (on subset test set)\n",
-    "print(\"\\n📊 Test seti değerlendiriliyor...\")\n",
-    "# Create filtered test dataloader\n",
-    "from src.strategies import filter_top_k_labels\n",
-    "filtered_test_ds, _, _ = filter_top_k_labels(data['test_dataset'], label_names, k=100)\n",
-    "filtered_test_dataloader = DataLoader(filtered_test_ds, batch_size=BASE_CONFIG['batch_size'], shuffle=False)\n",
+    "# Save CSV\n",
+    "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "topk_csv = OUTPUT_DIR / f'topk_analysis_{timestamp}.csv'\n",
+    "df_topk.to_csv(topk_csv, index=False)\n",
+    "print(f\"\\n✅ CSV saved: {topk_csv}\")\n",
     "\n",
-    "test_results = evaluate_model(\n",
-    "    model=model,\n",
-    "    test_dataloader=filtered_test_dataloader,\n",
-    "    label_names=strategy_config['label_list'],\n",
-    "    device=BASE_CONFIG['device']\n",
-    ")\n",
+    "# Create visualization\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
     "\n",
-    "# Store results\n",
-    "all_test_results[strategy_name] = {\n",
-    "    'config': strategy_config['name'],\n",
-    "    'description': strategy_config['description'],\n",
-    "    'results': test_results\n",
-    "}\n",
+    "# Plot 1: F1 Score vs K\n",
+    "ax = axes[0, 0]\n",
+    "ax.plot(df_topk['K'], df_topk['Micro F1'], marker='o', linewidth=2, markersize=8, label='Micro F1')\n",
+    "ax.set_xlabel('Number of Labels (K)', fontsize=12)\n",
+    "ax.set_ylabel('Micro F1 Score', fontsize=12)\n",
+    "ax.set_title('Model Performance vs Label Count', fontsize=14, fontweight='bold')\n",
+    "ax.grid(True, alpha=0.3)\n",
+    "ax.legend()\n",
+    "ax.invert_xaxis()  # Higher K on left\n",
     "\n",
-    "# Display results\n",
-    "print(\"\\n\" + \"=\"*60)\n",
-    "print(f\"✅ STRATEGY 5 TAMAMLANDI: {strategy_name}\")\n",
-    "print(\"=\"*60)\n",
-    "print(f\"\\n📈 Sonuçlar:\")\n",
-    "for metric, value in test_results.items():\n",
-    "    if isinstance(value, (int, float)):\n",
-    "        print(f\"   {metric}: {value:.4f}\")\n",
-    "print(\"\\n\")"
+    "# Plot 2: Precision vs Recall\n",
+    "ax = axes[0, 1]\n",
+    "ax.scatter(df_topk['Micro Recall'], df_topk['Micro Precision'], \n",
+    "           s=200, alpha=0.6, c=df_topk['K'], cmap='viridis')\n",
+    "for i, k in enumerate(df_topk['K']):\n",
+    "    ax.annotate(f'K={k}', \n",
+    "                (df_topk.iloc[i]['Micro Recall'], df_topk.iloc[i]['Micro Precision']),\n",
+    "                fontsize=10, ha='right')\n",
+    "ax.set_xlabel('Micro Recall', fontsize=12)\n",
+    "ax.set_ylabel('Micro Precision', fontsize=12)\n",
+    "ax.set_title('Precision-Recall Trade-off', fontsize=14, fontweight='bold')\n",
+    "ax.grid(True, alpha=0.3)\n",
+    "\n",
+    "# Plot 3: Recall@5 vs K\n",
+    "ax = axes[1, 0]\n",
+    "ax.bar(range(len(df_topk)), df_topk['Recall@5'], alpha=0.7, color='coral')\n",
+    "ax.set_xticks(range(len(df_topk)))\n",
+    "ax.set_xticklabels([f'Top-{k}' for k in df_topk['K']])\n",
+    "ax.set_ylabel('Recall@5', fontsize=12)\n",
+    "ax.set_title('Top-5 Recall by Label Count', fontsize=14, fontweight='bold')\n",
+    "ax.grid(axis='y', alpha=0.3)\n",
+    "for i, v in enumerate(df_topk['Recall@5']):\n",
+    "    ax.text(i, v + 0.02, f'{v:.3f}', ha='center', fontsize=10)\n",
+    "\n",
+    "# Plot 4: All metrics comparison\n",
+    "ax = axes[1, 1]\n",
+    "x = range(len(df_topk))\n",
+    "width = 0.2\n",
+    "ax.bar([i - width*1.5 for i in x], df_topk['Micro F1'], width, label='F1', alpha=0.8)\n",
+    "ax.bar([i - width*0.5 for i in x], df_topk['Micro Precision'], width, label='Precision', alpha=0.8)\n",
+    "ax.bar([i + width*0.5 for i in x], df_topk['Micro Recall'], width, label='Recall', alpha=0.8)\n",
+    "ax.bar([i + width*1.5 for i in x], df_topk['Recall@5'], width, label='Recall@5', alpha=0.8)\n",
+    "ax.set_xticks(x)\n",
+    "ax.set_xticklabels([f'Top-{k}' for k in df_topk['K']])\n",
+    "ax.set_ylabel('Score', fontsize=12)\n",
+    "ax.set_title('All Metrics Comparison', fontsize=14, fontweight='bold')\n",
+    "ax.legend()\n",
+    "ax.grid(axis='y', alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(OUTPUT_DIR / f'topk_analysis_{timestamp}.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "print(f\"\\n✅ Histogram saved: {OUTPUT_DIR / f'topk_analysis_{timestamp}.png'}\")\n",
+    "\n",
+    "# Store in all_test_results for comparison\n",
+    "for key, data in topk_results.items():\n",
+    "    all_test_results[key] = {\n",
+    "        'config': f\"Top-{data['k']} Labels\",\n",
+    "        'description': f\"Baseline BCE with {data['k']} most frequent labels\",\n",
+    "        'results': data['metrics']\n",
+    "    }\n",
+    "\n",
+    "print(f\"\\n{'='*60}\")\n",
+    "print(f\"✅ TOP-K ANALYSIS COMPLETE\")\n",
+    "print(f\"{'='*60}\\n\")"
    ]
   },
   {
