--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -1056,12 +1056,29 @@
     "if len(all_test_results) == 0:\n",
     "    print(\"⚠️ Kaydedilecek sonuç yok!\")\n",
     "else:\n",
+    "    # Helper function to convert numpy arrays to lists\n",
+    "    def convert_to_serializable(obj):\n",
+    "        \"\"\"Recursively convert numpy arrays to lists for JSON serialization.\"\"\"\n",
+    "        if isinstance(obj, np.ndarray):\n",
+    "            return obj.tolist()\n",
+    "        elif isinstance(obj, dict):\n",
+    "            return {key: convert_to_serializable(value) for key, value in obj.items()}\n",
+    "        elif isinstance(obj, list):\n",
+    "            return [convert_to_serializable(item) for item in obj]\n",
+    "        elif isinstance(obj, (np.integer, np.floating)):\n",
+    "            return float(obj)\n",
+    "        else:\n",
+    "            return obj\n",
+    "    \n",
     "    # Save results to JSON\n",
     "    timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
     "    results_file = OUTPUT_DIR / f'strategy_comparison_{timestamp}.json'\n",
     "    \n",
+    "    # Convert results to JSON-serializable format\n",
+    "    serializable_results = convert_to_serializable(all_test_results)\n",
+    "    \n",
     "    with open(results_file, 'w') as f:\n",
-    "        json.dump(all_test_results, f, indent=2)\n",
+    "        json.dump(serializable_results, f, indent=2)\n",
     "    \n",
     "    print(f\"✅ Sonuçlar kaydedildi: {results_file}\")\n",
     "    \n",
