--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -718,22 +718,192 @@
    "id": "276748ea",
    "metadata": {},
    "source": [
-    "### Strategy 5: Top-K Label Analysis (5, 10, 20, 50, 100)\n",
+    "# Top-K Label Analysis: Test model capacity with different label subset sizes\n",
+    "print(f\"\\n{'='*60}\")\n",
+    "print(f\"🧪 TOP-K LABEL ANALYSIS\")\n",
+    "print(f\"{'='*60}\\n\")\n",
     "\n",
-    "**Açıklama:** 5 farklı K değeri ile model kapasitesini test eder. Her K için baseline BCE kullanır.\n",
+    "from src.strategies import filter_top_k_labels\n",
     "\n",
-    "**Test Edilen K Değerleri:**\n",
-    "- Top-100: Geniş label seti\n",
-    "- Top-50: Orta seviye\n",
-    "- Top-20: Küçük label seti\n",
-    "- Top-10: Minimal label seti\n",
-    "- Top-5: En küçük subset\n",
+    "# Test different K values\n",
+    "k_values = [100, 50, 20, 10, 5]\n",
+    "topk_results = {}\n",
     "\n",
-    "**Çıktılar:**\n",
-    "- CSV dosyası: Tüm metriklerin karşılaştırması\n",
-    "- 4 grafikli histogram: F1 vs K, Precision-Recall, Recall@5, All Metrics\n",
+    "for k in k_values:\n",
+    "    print(f\"\\n{'='*60}\")\n",
+    "    print(f\"🔬 Testing Top-{k} Labels\")\n",
+    "    print(f\"{'='*60}\\n\")\n",
+    "    \n",
+    "    # Filter dataset to top-k labels\n",
+    "    filtered_train_ds, filtered_label_list, label_mapping = filter_top_k_labels(\n",
+    "        data['train_dataset'], \n",
+    "        label_names, \n",
+    "        k=k\n",
+    "    )\n",
+    "    filtered_test_ds, _, _ = filter_top_k_labels(\n",
+    "        data['test_dataset'], \n",
+    "        label_names, \n",
+    "        k=k\n",
+    "    )\n",
+    "    \n",
+    "    print(f\"📊 Dataset Statistics:\")\n",
+    "    print(f\"   Top-{k} labels selected\")\n",
+    "    print(f\"   Train samples: {len(filtered_train_ds)}\")\n",
+    "    print(f\"   Test samples: {len(filtered_test_ds)}\")\n",
+    "    print(f\"   Labels: {filtered_label_list[:5]}...\")\n",
+    "    \n",
+    "    # Create dataloaders\n",
+    "    topk_train_loader = DataLoader(\n",
+    "        filtered_train_ds,\n",
+    "        batch_size=BASE_CONFIG['batch_size'],\n",
+    "        shuffle=True\n",
+    "    )\n",
+    "    topk_test_loader = DataLoader(\n",
+    "        filtered_test_ds,\n",
+    "        batch_size=BASE_CONFIG['batch_size'],\n",
+    "        shuffle=False\n",
+    "    )\n",
+    "    \n",
+    "    # Load model for this K\n",
+    "    print(f\"\\n🔧 Loading model for {k} labels...\")\n",
+    "    topk_model = load_model(\n",
+    "        model_name=BASE_CONFIG['model_name'],\n",
+    "        num_labels=k,\n",
+    "        device=BASE_CONFIG['device'],\n",
+    "        use_focal_loss=False,\n",
+    "        pos_weight=None\n",
+    "    )\n",
+    "    \n",
+    "    # Train model\n",
+    "    print(f\"\\n🚀 Training on Top-{k}...\")\n",
+    "    topk_history = train_model(\n",
+    "        model=topk_model,\n",
+    "        train_dataloader=topk_train_loader,\n",
+    "        num_epochs=BASE_CONFIG['num_epochs'],\n",
+    "        learning_rate=BASE_CONFIG['learning_rate'],\n",
+    "        device=BASE_CONFIG['device']\n",
+    "    )\n",
+    "    \n",
+    "    # Evaluate model\n",
+    "    print(f\"\\n📊 Evaluating Top-{k}...\")\n",
+    "    topk_test_results = evaluate_model(\n",
+    "        model=topk_model,\n",
+    "        test_dataloader=topk_test_loader,\n",
+    "        label_names=filtered_label_list,\n",
+    "        device=BASE_CONFIG['device']\n",
+    "    )\n",
+    "    \n",
+    "    # Store results\n",
+    "    topk_results[f'top_{k}'] = {\n",
+    "        'k': k,\n",
+    "        'num_train': len(filtered_train_ds),\n",
+    "        'num_test': len(filtered_test_ds),\n",
+    "        'metrics': topk_test_results,\n",
+    "        'labels': filtered_label_list\n",
+    "    }\n",
+    "    \n",
+    "    # Display results\n",
+    "    print(f\"\\n✅ Top-{k} Results:\")\n",
+    "    for metric, value in topk_test_results.items():\n",
+    "        if isinstance(value, (int, float)):\n",
+    "            print(f\"   {metric}: {value:.4f}\")\n",
     "\n",
-    "**Önerilen Kullanım:** Model'in farklı label sayılarındaki performansını görmek için çalıştırın (~2-2.5 saat)."
+    "# Create comparison DataFrame\n",
+    "print(f\"\\n{'='*60}\")\n",
+    "print(f\"📊 TOP-K COMPARISON TABLE\")\n",
+    "print(f\"{'='*60}\\n\")\n",
+    "\n",
+    "topk_comparison = []\n",
+    "for key, data in topk_results.items():\n",
+    "    metrics = data['metrics']\n",
+    "    topk_comparison.append({\n",
+    "        'K': data['k'],\n",
+    "        'Train Samples': data['num_train'],\n",
+    "        'Test Samples': data['num_test'],\n",
+    "        'Micro F1': metrics.get('micro_f1', 0),\n",
+    "        'Hamming Loss': metrics.get('hamming_loss', 0),\n",
+    "        'Micro Precision': metrics.get('micro_precision', 0),\n",
+    "        'Micro Recall': metrics.get('micro_recall', 0),\n",
+    "        'Recall@5': metrics.get('recall_at_5', 0),\n",
+    "        'Precision@5': metrics.get('precision_at_5', 0)\n",
+    "    })\n",
+    "\n",
+    "df_topk = pd.DataFrame(topk_comparison)\n",
+    "df_topk = df_topk.sort_values('K', ascending=False)\n",
+    "print(df_topk.to_string(index=False))\n",
+    "\n",
+    "# Save CSV\n",
+    "timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "topk_csv = OUTPUT_DIR / f'topk_analysis_{timestamp}.csv'\n",
+    "df_topk.to_csv(topk_csv, index=False)\n",
+    "print(f\"\\n✅ CSV saved: {topk_csv}\")\n",
+    "\n",
+    "# Create visualization\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(16, 12))\n",
+    "\n",
+    "# Plot 1: F1 Score vs K\n",
+    "ax = axes[0, 0]\n",
+    "ax.plot(df_topk['K'], df_topk['Micro F1'], marker='o', linewidth=2, markersize=8, label='Micro F1', color='blue')\n",
+    "ax.set_xlabel('Number of Labels (K)', fontsize=12)\n",
+    "ax.set_ylabel('Micro F1 Score', fontsize=12)\n",
+    "ax.set_title('Model Performance vs Label Count', fontsize=14, fontweight='bold')\n",
+    "ax.grid(True, alpha=0.3)\n",
+    "ax.legend()\n",
+    "ax.invert_xaxis()  # Higher K on left\n",
+    "\n",
+    "# Plot 2: Hamming Loss vs K\n",
+    "ax = axes[0, 1]\n",
+    "ax.plot(df_topk['K'], df_topk['Hamming Loss'], marker='s', linewidth=2, markersize=8, label='Hamming Loss', color='red')\n",
+    "ax.set_xlabel('Number of Labels (K)', fontsize=12)\n",
+    "ax.set_ylabel('Hamming Loss (lower is better)', fontsize=12)\n",
+    "ax.set_title('Hamming Loss vs Label Count', fontsize=14, fontweight='bold')\n",
+    "ax.grid(True, alpha=0.3)\n",
+    "ax.legend()\n",
+    "ax.invert_xaxis()  # Higher K on left\n",
+    "\n",
+    "# Plot 3: Recall@5 vs K\n",
+    "ax = axes[1, 0]\n",
+    "ax.bar(range(len(df_topk)), df_topk['Recall@5'], alpha=0.7, color='coral')\n",
+    "ax.set_xticks(range(len(df_topk)))\n",
+    "ax.set_xticklabels([f'Top-{k}' for k in df_topk['K']])\n",
+    "ax.set_ylabel('Recall@5', fontsize=12)\n",
+    "ax.set_title('Top-5 Recall by Label Count', fontsize=14, fontweight='bold')\n",
+    "ax.grid(axis='y', alpha=0.3)\n",
+    "for i, v in enumerate(df_topk['Recall@5']):\n",
+    "    ax.text(i, v + 0.02, f'{v:.3f}', ha='center', fontsize=10)\n",
+    "\n",
+    "# Plot 4: All metrics comparison\n",
+    "ax = axes[1, 1]\n",
+    "x = range(len(df_topk))\n",
+    "width = 0.2\n",
+    "ax.bar([i - width*1.5 for i in x], df_topk['Micro F1'], width, label='F1', alpha=0.8)\n",
+    "ax.bar([i - width*0.5 for i in x], df_topk['Micro Precision'], width, label='Precision', alpha=0.8)\n",
+    "ax.bar([i + width*0.5 for i in x], df_topk['Micro Recall'], width, label='Recall', alpha=0.8)\n",
+    "ax.bar([i + width*1.5 for i in x], df_topk['Recall@5'], width, label='Recall@5', alpha=0.8)\n",
+    "ax.set_xticks(x)\n",
+    "ax.set_xticklabels([f'Top-{k}' for k in df_topk['K']])\n",
+    "ax.set_ylabel('Score', fontsize=12)\n",
+    "ax.set_title('All Metrics Comparison', fontsize=14, fontweight='bold')\n",
+    "ax.legend()\n",
+    "ax.grid(axis='y', alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(OUTPUT_DIR / f'topk_analysis_{timestamp}.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "print(f\"\\n✅ Histogram saved: {OUTPUT_DIR / f'topk_analysis_{timestamp}.png'}\")\n",
+    "\n",
+    "# Store in all_test_results for comparison\n",
+    "for key, data in topk_results.items():\n",
+    "    all_test_results[key] = {\n",
+    "        'config': f\"Top-{data['k']} Labels\",\n",
+    "        'description': f\"Baseline BCE with {data['k']} most frequent labels\",\n",
+    "        'results': data['metrics']\n",
+    "    }\n",
+    "\n",
+    "print(f\"\\n{'='*60}\")\n",
+    "print(f\"✅ TOP-K ANALYSIS COMPLETE\")\n",
+    "print(f\"{'='*60}\\n\")"
    ]
   },
   {
@@ -966,6 +1136,7 @@
     "        comparison_data.append({\n",
     "            'Strategy': strategy_name,\n",
     "            'Micro F1': results.get('micro_f1', 0),\n",
+    "            'Hamming Loss': results.get('hamming_loss', 0),\n",
     "            'Recall@5': results.get('recall_at_5', 0),\n",
     "            'Precision@5': results.get('precision_at_5', 0),\n",
     "            'Recall@10': results.get('recall_at_10', 0),\n",
@@ -982,9 +1153,11 @@
     "    # Find best strategy\n",
     "    best_strategy = df_comparison.iloc[0]['Strategy']\n",
     "    best_f1 = df_comparison.iloc[0]['Micro F1']\n",
+    "    best_hamming = df_comparison.iloc[0]['Hamming Loss']\n",
     "    \n",
     "    print(f\"\\n🏆 EN İYİ STRATEJİ: {best_strategy}\")\n",
     "    print(f\"   Micro F1 Score: {best_f1:.4f}\")\n",
+    "    print(f\"   Hamming Loss: {best_hamming:.4f} (lower is better)\")\n",
     "    \n",
     "    # Compare to baseline if exists\n",
     "    if 'baseline' in all_test_results:\n",
@@ -1014,18 +1187,15 @@
     "        axes[0].legend()\n",
     "        axes[0].grid(axis='y', alpha=0.3)\n",
     "        \n",
-    "        # Precision-Recall comparison\n",
-    "        precision_at_5 = df_comparison['Precision@5'].tolist()\n",
-    "        precision_at_10 = df_comparison['Precision@10'].tolist()\n",
+    "        # Hamming Loss comparison\n",
+    "        hamming_loss_vals = df_comparison['Hamming Loss'].tolist()\n",
     "        \n",
-    "        axes[1].bar(x - width/2, precision_at_5, width, label='Precision@5', alpha=0.8)\n",
-    "        axes[1].bar(x + width/2, precision_at_10, width, label='Precision@10', alpha=0.8)\n",
+    "        axes[1].bar(x, hamming_loss_vals, alpha=0.8, color='coral')\n",
     "        axes[1].set_xlabel('Strategy')\n",
-    "        axes[1].set_ylabel('Score')\n",
-    "        axes[1].set_title('Precision@K Comparison')\n",
+    "        axes[1].set_ylabel('Hamming Loss (lower is better)')\n",
+    "        axes[1].set_title('Hamming Loss Comparison')\n",
     "        axes[1].set_xticks(x)\n",
     "        axes[1].set_xticklabels(strategies, rotation=45, ha='right')\n",
-    "        axes[1].legend()\n",
     "        axes[1].grid(axis='y', alpha=0.3)\n",
     "        \n",
     "        plt.tight_layout()\n",
@@ -1039,11 +1209,64 @@
    "id": "5c58a4da",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
-    "## 💾 SAVE RESULTS\n",
-    "\n",
-    "Sonuçları kaydetmek için bu hücreyi çalıştırın."
+    "if len(all_test_results) == 0:\n",
+    "    print(\"⚠️ Kaydedilecek sonuç yok!\")\n",
+    "else:\n",
+    "    # Helper function to convert numpy arrays to lists\n",
+    "    def convert_to_serializable(obj):\n",
+    "        \"\"\"Recursively convert numpy arrays to lists for JSON serialization.\"\"\"\n",
+    "        if isinstance(obj, np.ndarray):\n",
+    "            return obj.tolist()\n",
+    "        elif isinstance(obj, dict):\n",
+    "            return {key: convert_to_serializable(value) for key, value in obj.items()}\n",
+    "        elif isinstance(obj, list):\n",
+    "            return [convert_to_serializable(item) for item in obj]\n",
+    "        elif isinstance(obj, (np.integer, np.floating)):\n",
+    "            return float(obj)\n",
+    "        else:\n",
+    "            return obj\n",
+    "    \n",
+    "    # Save results to JSON\n",
+    "    timestamp = datetime.now().strftime('%Y%m%d_%H%M%S')\n",
+    "    results_file = OUTPUT_DIR / f'strategy_comparison_{timestamp}.json'\n",
+    "    \n",
+    "    # Convert results to JSON-serializable format\n",
+    "    serializable_results = convert_to_serializable(all_test_results)\n",
+    "    \n",
+    "    with open(results_file, 'w') as f:\n",
+    "        json.dump(serializable_results, f, indent=2)\n",
+    "    \n",
+    "    print(f\"✅ Sonuçlar kaydedildi: {results_file}\")\n",
+    "    \n",
+    "    # Save comparison table to CSV\n",
+    "    comparison_data = []\n",
+    "    for strategy_name, data in all_test_results.items():\n",
+    "        results = data['results']\n",
+    "        comparison_data.append({\n",
+    "            'Strategy': strategy_name,\n",
+    "            'Micro_F1': results.get('micro_f1', 0),\n",
+    "            'Hamming_Loss': results.get('hamming_loss', 0),\n",
+    "            'Recall_at_5': results.get('recall_at_5', 0),\n",
+    "            'Precision_at_5': results.get('precision_at_5', 0),\n",
+    "            'Recall_at_10': results.get('recall_at_10', 0),\n",
+    "            'Precision_at_10': results.get('precision_at_10', 0),\n",
+    "            'Example_Based_Accuracy': results.get('example_based_accuracy', 0)\n",
+    "        })\n",
+    "    \n",
+    "    df_comparison = pd.DataFrame(comparison_data)\n",
+    "    csv_file = OUTPUT_DIR / f'strategy_comparison_{timestamp}.csv'\n",
+    "    df_comparison.to_csv(csv_file, index=False)\n",
+    "    \n",
+    "    print(f\"✅ CSV tablosu kaydedildi: {csv_file}\")\n",
+    "    \n",
+    "    # Download files if on Colab\n",
+    "    try:\n",
+    "        from google.colab import files\n",
+    "        files.download(str(results_file))\n",
+    "        files.download(str(csv_file))\n",
+    "        print(\"✅ Dosyalar indirildi\")\n",
+    "    except ImportError:\n",
+    "        print(\"💡 Colab değil, dosyalar sadece kaydedildi\")"
    ]
   },
   {
