refactor: reorganize strategies and add Classifier Chain
FIXED STRUCTURE:
- Strategy 1: Baseline BCE (lines 253-337)
- Strategy 2: Weighted BCE (lines 340-424)
- Strategy 3: Focal Loss γ=2 (lines 427-512)
- Strategy 4: Focal Loss γ=5 (lines 515-595) ✅ Fixed
- Strategy 5: Top-K Analysis (lines 598-864) ✅ Fixed
- Strategy 6: Classifier Chain (lines 867+) ✅ New

NEW FILES:
- src/classifier_chain.py: BERTClassifierChain implementation

CHANGES:
- Removed duplicate/misplaced Strategy 4 code
- Fixed Strategy 5 markdown description
- Added proper Strategy 6 implementation
- All strategies now properly numbered and organized
- Ready for loss function + classification technique combinations

NEXT STEPS:
- Test all 6 strategies independently
- Compare loss-based (1-4) vs classification-based (6)
- Find optimal loss+classification combination

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -626,6 +626,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3af275ab",
+   "metadata": {},
+   "source": [
+    "### Strategy 6: Classifier Chain (Multi-label Classification)\n",
+    "\n",
+    "**Açıklama:** BERT embeddings + sklearn ClassifierChain. Her label'ı sırayla tahmin ederken önceki tahminleri feature olarak kullanır (label dependencies).\n",
+    "\n",
+    "**Avantajlar:**\n",
+    "- Label arası bağımlılıkları öğrenir\n",
+    "- Binary classification chain (her label için ayrı model)\n",
+    "- Class imbalance her binary problem'de ayrı handle edilir\n",
+    "\n",
+    "**Base Estimator:** Logistic Regression (class_weight='balanced')\n",
+    "\n",
+    "**Önerilen Kullanım:** Diğer stratejilerle karşılaştırmak için çalıştırın (~45-60 dakika)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c188f0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strategy_name = \"classifier_chain\"\n",
+    "print(f\"\\n{'='*60}\")\n",
+    "print(f\"🧪 STRATEGY 6: Classifier Chain\")\n",
+    "print(f\"{'='*60}\\n\")\n",
+    "\n",
+    "from src.classifier_chain import train_classifier_chain, evaluate_classifier_chain\n",
+    "\n",
+    "# Load BERT model for feature extraction (without classification head)\n",
+    "print(\"🔧 Loading BERT model for embeddings...\")\n",
+    "bert_model_for_chain = load_model(\n",
+    "    model_name=BASE_CONFIG['model_name'],\n",
+    "    num_labels=num_labels,\n",
+    "    device=BASE_CONFIG['device'],\n",
+    "    use_focal_loss=False,\n",
+    "    pos_weight=None\n",
+    ")\n",
+    "\n",
+    "print(\"📋 Konfigürasyon:\")\n",
+    "print(f\"   Strategy: Classifier Chain\")\n",
+    "print(f\"   Description: BERT embeddings + sklearn ClassifierChain\")\n",
+    "print(f\"   Base estimator: LogisticRegression (balanced)\")\n",
+    "print(f\"   Chain order: random\")\n",
+    "print(f\"   Label dependencies: Yes (chain structure)\")\n",
+    "\n",
+    "# Train ClassifierChain\n",
+    "print(\"\\n🔗 Training Classifier Chain...\")\n",
+    "chain_model = train_classifier_chain(\n",
+    "    bert_model=bert_model_for_chain,\n",
+    "    train_dataloader=train_dataloader,\n",
+    "    device=BASE_CONFIG['device'],\n",
+    "    base_estimator='logistic',  # 'logistic' or 'random_forest'\n",
+    "    order='random',  # Random order for chain\n",
+    "    cv=None,  # Use true labels (not cross-validated)\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Evaluate model\n",
+    "print(\"\\n📊 Test seti değerlendiriliyor...\")\n",
+    "test_results = evaluate_classifier_chain(\n",
+    "    model=chain_model,\n",
+    "    test_dataloader=test_dataloader,\n",
+    "    label_names=label_names\n",
+    ")\n",
+    "\n",
+    "# Store results\n",
+    "all_test_results[strategy_name] = {\n",
+    "    'config': 'Classifier Chain (Logistic)',\n",
+    "    'description': 'BERT + ClassifierChain with label dependencies',\n",
+    "    'results': test_results\n",
+    "}\n",
+    "\n",
+    "# Display results\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(f\"✅ STRATEGY 6 TAMAMLANDI: {strategy_name}\")\n",
+    "print(\"=\"*60)\n",
+    "print(f\"\\n📈 Sonuçlar:\")\n",
+    "for metric, value in test_results.items():\n",
+    "    if isinstance(value, (int, float)):\n",
+    "        print(f\"   {metric}: {value:.4f}\")\n",
+    "print(\"\\n\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "11e88621",
@@ -1350,44 +1438,91 @@
     "- Pre-trained on security-specific corpus\n",
     "\n",
     "**Dataset:**\n",
-    "- Hybrid mode kullanılıyor (tumeteor + sarahwei + Zainabsa99)\n",
-    "- Toplam ~16k sample, daha iyi label coverage\n",
-    "- Tek dataset kullanmak için: `use_hybrid=False` parametresi ekle\n",
+    "- Single source: tumeteor/Security-TTP-Mapping (14.9k train + 2.6k test)\n",
+    "- 499 unique MITRE ATT&CK technique labels\n",
+    "- Tutarlı label format, yüksek kalite\n",
+    "\n",
+    "**Stratejiler:**\n",
+    "\n",
+    "**Loss Function Based (BERT end-to-end):**\n",
+    "1. **Baseline BCE** - Referans performans, class imbalance handle yok\n",
+    "2. **Weighted BCE** - En etkili, pos_weight ile rare label'lara odaklanır\n",
+    "3. **Focal Loss (γ=2)** - Hard örnek odaklı, moderate focusing\n",
+    "4. **Focal Loss (γ=5)** - Hard örnek odaklı, strong focusing\n",
+    "\n",
+    "**Multi-label Classification Based:**\n",
+    "6. **Classifier Chain** - BERT embeddings + sklearn ClassifierChain\n",
+    "   - Label dependencies öğrenir (her label önceki tahminleri kullanır)\n",
+    "   - Binary classification chain (her label için ayrı LogisticRegression)\n",
+    "   - Class imbalance her binary problem'de ayrı handle edilir\n",
+    "   - Avantaj: Label arası ilişkileri modelleyebilir\n",
+    "   - Dezavantaj: Training süresi daha uzun (499 binary classifier)\n",
+    "\n",
+    "**Capacity Analysis:**\n",
+    "5. **Top-K Labels** - Model kapasitesini test et (K=5,10,20,50,100)\n",
     "\n",
     "**Test Sırası:**\n",
     "1. **Baseline** - Her zaman ilk olarak çalıştırın (referans performans)\n",
-    "2. **Weighted BCE** - En umut verici strateji, Micro F1 > 0.15 bekleniyor\n",
-    "3. Weighted BCE başarılı olursa → Bitti, kullan!\n",
-    "4. Weighted BCE başarısız olursa → **Focal Loss (γ=2)** dene\n",
-    "5. Hala kötüyse → **Focal Loss (γ=5)** dene\n",
-    "6. Hepsi başarısız olursa → **Top-100** ile model öğrenme kapasitesini kontrol et\n",
+    "2. **Weighted BCE** - En umut verici strateji, Micro F1 > 0.10 bekleniyor\n",
+    "3. **Classifier Chain** - Label dependency avantajı test et\n",
+    "4. Weighted BCE başarılı olursa → Bitti, kullan!\n",
+    "5. Classifier Chain daha iyiyse → Multi-label yaklaşım kazandı!\n",
+    "6. İkisi de kötüyse → **Focal Loss (γ=2)** dene\n",
+    "7. Hala kötüyse → **Focal Loss (γ=5)** dene\n",
+    "8. Hepsi başarısız olursa → **Top-100** ile model öğrenme kapasitesini kontrol et\n",
     "\n",
     "**Başarı Kriterleri:**\n",
     "- Micro F1 > 0.15 → İyi performans\n",
     "- Recall@5 > 0.30 → Çok iyi performans\n",
+    "- Hamming Loss < 0.10 → İyi performans\n",
     "- Micro F1 < 0.10 → Strateji işe yaramadı\n",
     "\n",
-    "**CTI-BERT ile Beklenen İyileşmeler:**\n",
-    "- Cyber security terminolojisini daha iyi anlama\n",
-    "- MITRE ATT&CK kavramlarında daha yüksek accuracy\n",
-    "- Rare technique'leri daha iyi tanıma\n",
+    "**Beklenen Performans (Strategy Karşılaştırması):**\n",
+    "```\n",
+    "Strategy          | Micro F1 | Hamming Loss | Recall@5 | Training Time\n",
+    "------------------|----------|--------------|----------|---------------\n",
+    "Baseline BCE      | ~0.00    | ~0.02        | ~0.13    | 30 min\n",
+    "Weighted BCE      | ~0.10    | ~0.12        | ~0.79    | 30 min ⭐\n",
+    "Focal γ=2         | ~0.00    | ~0.02        | ~0.15    | 30 min\n",
+    "Focal γ=5         | ~0.19    | ~0.03        | ~0.50    | 30 min\n",
+    "Classifier Chain  | ???      | ???          | ???      | 45-60 min 🆕\n",
+    "```\n",
     "\n",
     "**Metrikler:**\n",
     "- **Micro F1:** Genel performans (threshold-based)\n",
+    "- **Hamming Loss:** Yanlış tahmin edilen label oranı (0=perfect, düşük=iyi)\n",
     "- **Recall@5:** Top-5 tahmin içinde kaç doğru label var\n",
     "- **Precision@5:** Top-5 tahminlerin kaçı doğru\n",
     "- **Example-Based Accuracy:** Tüm label'ların tam eşleşmesi (çok strict)\n",
     "\n",
+    "**ClassifierChain Detayları:**\n",
+    "- **Nasıl çalışır:** \n",
+    "  1. BERT ile text → embedding (768-dim vector)\n",
+    "  2. Her label için binary classifier (LogisticRegression)\n",
+    "  3. Chain: label_2 tahmini → label_1'in tahminini feature olarak kullanır\n",
+    "  4. 499 label → 499 binary classifier (zincirleme)\n",
+    "  \n",
+    "- **Avantajlar:**\n",
+    "  - Label dependencies modelleyebilir (örn: T1059 varsa T1059.001 olasılığı artar)\n",
+    "  - Her binary problem balanced olarak handle edilir\n",
+    "  - BERT fine-tuning gerektirmez (sadece embedding extraction)\n",
+    "  \n",
+    "- **Dezavantajlar:**\n",
+    "  - Training süresi daha uzun (499 model)\n",
+    "  - Chain order'a bağımlı (random order kullanıyoruz)\n",
+    "  - Memory kullanımı yüksek\n",
+    "\n",
     "**Süre:**\n",
-    "- Her strateji ~30-45 dakika sürer\n",
-    "- CTI-BERT model download ilk seferde ~5 dakika ekstra\n",
-    "- Modular yaklaşım sayesinde istediğiniz zaman durup sonuçlara bakabilirsiniz\n",
+    "- Strategy 1-4: ~30-45 dakika\n",
+    "- Strategy 6 (Classifier Chain): ~45-60 dakika (embedding extraction + 499 binary classifiers)\n",
+    "- Strategy 5 (Top-K): ~2-2.5 saat (5 model)\n",
     "\n",
     "**Hatırlatmalar:**\n",
-    "- Herbir strateji hücresi bağımsızdır, istediğiniz sırada çalıştırabilirsiniz\n",
+    "- Her strateji hücresi bağımsızdır, istediğiniz sırada çalıştırabilirsiniz\n",
     "- Sonuçlar `all_test_results` dictionary'sinde saklanır\n",
     "- Comparison hücresini dilediğiniz zaman çalıştırıp ara sonuçlara bakabilirsiniz\n",
-    "- CTI-BERT ilk indirilirken cache'lenir, sonraki çalıştırmalar hızlıdır\n"
+    "- CTI-BERT ilk indirilirken cache'lenir, sonraki çalıştırmalar hızlıdır\n",
+    "- Classifier Chain için sklearn yüklü olmalı (Colab'da default olarak var)"
    ]
   }
  ],
