Fix: Move PART C markdown above hybrid strategies code

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -1012,6 +1012,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f4409327",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## 🔄 PART C: HYBRID STRATEGIES (Loss × Classification)\n",
+    "\n",
+    "**Comprehensive Testing:** 4 Loss Functions × 4 Classification Methods = **16 Kombinasyonlar**\n",
+    "\n",
+    "Bu bölüm **tek döngü** ile tüm kombinasyonları test eder:\n",
+    "\n",
+    "### Loss Functions:\n",
+    "1. **Baseline BCE** - Standard binary cross-entropy\n",
+    "2. **Weighted BCE** - Frequency-based weights (pos_weight)\n",
+    "3. **Focal Loss γ=2** - Moderate hard example focusing\n",
+    "4. **Focal Loss γ=5** - Strong hard example focusing\n",
+    "\n",
+    "### Classification Methods:\n",
+    "1. **ClassifierChain** - Label dependencies (sequential)\n",
+    "2. **MultiOutputClassifier** - Independent labels (parallel)\n",
+    "3. **ExtraTreesClassifier** - Extremely randomized trees (faster, more diverse)\n",
+    "4. **RandomForestClassifier** - Ensemble of decision trees (optimal splits)\n",
+    "\n",
+    "### Strategy Matrix:\n",
+    "```\n",
+    "                    ClassifierChain  MultiOutput  ExtraTrees  RandomForest\n",
+    "Baseline BCE        Strategy 7       Strategy 8   Strategy 9  Strategy 10\n",
+    "Weighted BCE        Strategy 11      Strategy 12  Strategy 13 Strategy 14\n",
+    "Focal γ=2           Strategy 15      Strategy 16  Strategy 17 Strategy 18\n",
+    "Focal γ=5           Strategy 19      Strategy 20  Strategy 21 Strategy 22\n",
+    "```\n",
+    "\n",
+    "**RandomForest vs ExtraTrees:**\n",
+    "- **RandomForest**: Optimal split selection → slightly better accuracy, slower\n",
+    "- **ExtraTrees**: Random split selection → faster, more diverse, less overfitting\n",
+    "- Both: class_weight='balanced', n_jobs=-1 (parallel training)\n",
+    "\n",
+    "**Toplam Süre:** ~12-16 saat (her kombinasyon ~45-60 dakika)\n",
+    "\n",
+    "**Kullanım:** Aşağıdaki hücreyi çalıştırarak tüm kombinasyonları otomatik olarak test edin."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e104bd35",
@@ -1216,56 +1260,12 @@
     "        \n",
     "        strategy_counter += 1\n",
     "\n",
-    "print(f\"💡 Run 'Results Comparison' cell to see detailed comparison\\n\")\n",
-    "\n",
-    "print(f\"\\n{'='*80}\")print(f\"💡 Results stored in 'all_test_results' dictionary\")\n",
-    "\n",
-    "print(f\"✅ TÜM HYBRID STRATEGIES TAMAMLANDI!\")print(f\"\\n📊 Total strategies tested: {strategy_counter - 7}\")\n",
-    "print(f\"{'='*80}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bb5e3a10",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "## 🔄 PART C: HYBRID STRATEGIES (Loss × Classification)\n",
-    "\n",
-    "**Comprehensive Testing:** 4 Loss Functions × 4 Classification Methods = **16 Kombinasyonlar**\n",
-    "\n",
-    "Bu bölüm **tek döngü** ile tüm kombinasyonları test eder:\n",
-    "\n",
-    "### Loss Functions:\n",
-    "1. **Baseline BCE** - Standard binary cross-entropy\n",
-    "2. **Weighted BCE** - Frequency-based weights (pos_weight)\n",
-    "3. **Focal Loss γ=2** - Moderate hard example focusing\n",
-    "4. **Focal Loss γ=5** - Strong hard example focusing\n",
-    "\n",
-    "### Classification Methods:\n",
-    "1. **ClassifierChain** - Label dependencies (sequential)\n",
-    "2. **MultiOutputClassifier** - Independent labels (parallel)\n",
-    "3. **ExtraTreesClassifier** - Extremely randomized trees (faster, more diverse)\n",
-    "4. **RandomForestClassifier** - Ensemble of decision trees (optimal splits)\n",
-    "\n",
-    "### Strategy Matrix:\n",
-    "```\n",
-    "                    ClassifierChain  MultiOutput  ExtraTrees  RandomForest\n",
-    "Baseline BCE        Strategy 7       Strategy 8   Strategy 9  Strategy 10\n",
-    "Weighted BCE        Strategy 11      Strategy 12  Strategy 13 Strategy 14\n",
-    "Focal γ=2           Strategy 15      Strategy 16  Strategy 17 Strategy 18\n",
-    "Focal γ=5           Strategy 19      Strategy 20  Strategy 21 Strategy 22\n",
-    "```\n",
-    "\n",
-    "**RandomForest vs ExtraTrees:**\n",
-    "- **RandomForest**: Optimal split selection → slightly better accuracy, slower\n",
-    "- **ExtraTrees**: Random split selection → faster, more diverse, less overfitting\n",
-    "- Both: class_weight='balanced', n_jobs=-1 (parallel training)\n",
-    "\n",
-    "**Toplam Süre:** ~12-16 saat (her kombinasyon ~45-60 dakika)\n",
-    "\n",
-    "**Kullanım:** Tüm kombinasyonları otomatik olarak test etmek için bu hücreyi çalıştırın."
+    "print(f\"\\n{'='*80}\")\n",
+    "print(f\"✅ TÜM HYBRID STRATEGIES TAMAMLANDI!\")\n",
+    "print(f\"{'='*80}\")\n",
+    "print(f\"\\n📊 Total strategies tested: {strategy_counter - 7}\")\n",
+    "print(f\"💡 Results stored in 'all_test_results' dictionary\")\n",
+    "print(f\"💡 Run 'Results Comparison' cell to see detailed comparison\\n\")"
    ]
   },
   {
