Update notebook: show tree classifier optimization info after git pull

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -38,6 +38,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "309c81ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Update repository to latest version (get optimized tree classifiers)\n",
+    "!cd /content/Mitre_Attack_TTP_Mapping && git pull origin main\n",
+    "\n",
+    "print(\"\\n⚡ OPTIMIZATION APPLIED:\")\n",
+    "print(\"   - ExtraTreesClassifier: 50 trees (was 100)\")\n",
+    "print(\"   - RandomForestClassifier: 50 trees (was 100)\")\n",
+    "print(\"   - max_features='sqrt' (~28 features per split instead of 768)\")\n",
+    "print(\"   - min_samples_split=20 (faster splits)\")\n",
+    "print(\"   - Expected speedup: ~4x faster training!\")\n",
+    "print(\"\\n   If training was stuck, Runtime > Interrupt execution, then re-run from Strategy cell\\n\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4dc270e4",
    "metadata": {},
