--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -1320,64 +1320,63 @@
     "        comparison_data.append({\n",
     "            'Strategy': strategy_name,\n",
     "            'Micro F1': results.get('micro_f1', 0),\n",
-    "            'Hamming Loss': results.get('hamming_loss', 0),\n",
+    "            'mAP': results.get('mean_average_precision', 0),\n",
     "            'Recall@5': results.get('recall_at_5', 0),\n",
     "            'Precision@5': results.get('precision_at_5', 0),\n",
-    "            'Recall@10': results.get('recall_at_10', 0),\n",
-    "            'Precision@10': results.get('precision_at_10', 0),\n",
-    "            'Example Accuracy': results.get('example_based_accuracy', 0)\n",
+    "            'Hamming Loss': results.get('hamming_loss', 0),\n",
+    "            'Subset Accuracy': results.get('example_based_accuracy', 0)\n",
     "        })\n",
     "    \n",
     "    df_comparison = pd.DataFrame(comparison_data)\n",
-    "    df_comparison = df_comparison.sort_values('Micro F1', ascending=False)\n",
+    "    df_comparison = df_comparison.sort_values('mAP', ascending=False)  # Sort by mAP\n",
     "    \n",
     "    print(df_comparison.to_string(index=False))\n",
     "    print(\"\\n\" + \"=\"*80)\n",
     "    \n",
     "    # Find best strategy\n",
     "    best_strategy = df_comparison.iloc[0]['Strategy']\n",
+    "    best_map = df_comparison.iloc[0]['mAP']\n",
     "    best_f1 = df_comparison.iloc[0]['Micro F1']\n",
-    "    best_hamming = df_comparison.iloc[0]['Hamming Loss']\n",
     "    \n",
     "    print(f\"\\n🏆 EN İYİ STRATEJİ: {best_strategy}\")\n",
+    "    print(f\"   mAP (Ranking Quality): {best_map:.4f}\")\n",
     "    print(f\"   Micro F1 Score: {best_f1:.4f}\")\n",
-    "    print(f\"   Hamming Loss: {best_hamming:.4f} (lower is better)\")\n",
     "    \n",
     "    # Compare to baseline if exists\n",
     "    if 'baseline' in all_test_results:\n",
-    "        baseline_f1 = all_test_results['baseline']['results'].get('micro_f1', 0)\n",
-    "        improvement = ((best_f1 - baseline_f1) / baseline_f1 * 100) if baseline_f1 > 0 else 0\n",
-    "        print(f\"   Baseline'a göre iyileştirme: {improvement:+.2f}%\")\n",
+    "        baseline_map = all_test_results['baseline']['results'].get('mean_average_precision', 0)\n",
+    "        improvement = ((best_map - baseline_map) / baseline_map * 100) if baseline_map > 0 else 0\n",
+    "        print(f\"   Baseline'a göre mAP iyileştirme: {improvement:+.2f}%\")\n",
     "    \n",
     "    # Plot comparison\n",
     "    if len(all_test_results) > 1:\n",
     "        fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
     "        \n",
-    "        # F1 scores comparison\n",
+    "        # mAP and F1 scores comparison\n",
     "        strategies = df_comparison['Strategy'].tolist()\n",
+    "        mean_ap = df_comparison['mAP'].tolist()\n",
     "        micro_f1 = df_comparison['Micro F1'].tolist()\n",
-    "        recall_at_5 = df_comparison['Recall@5'].tolist()\n",
     "        \n",
     "        x = np.arange(len(strategies))\n",
     "        width = 0.35\n",
     "        \n",
-    "        axes[0].bar(x - width/2, micro_f1, width, label='Micro F1', alpha=0.8)\n",
-    "        axes[0].bar(x + width/2, recall_at_5, width, label='Recall@5', alpha=0.8)\n",
+    "        axes[0].bar(x - width/2, mean_ap, width, label='mAP (Ranking)', alpha=0.8, color='green')\n",
+    "        axes[0].bar(x + width/2, micro_f1, width, label='Micro F1', alpha=0.8, color='blue')\n",
     "        axes[0].set_xlabel('Strategy')\n",
     "        axes[0].set_ylabel('Score')\n",
-    "        axes[0].set_title('Micro F1 & Recall@5 Comparison')\n",
+    "        axes[0].set_title('mAP & Micro F1 Comparison')\n",
     "        axes[0].set_xticks(x)\n",
     "        axes[0].set_xticklabels(strategies, rotation=45, ha='right')\n",
     "        axes[0].legend()\n",
     "        axes[0].grid(axis='y', alpha=0.3)\n",
     "        \n",
-    "        # Hamming Loss comparison\n",
-    "        hamming_loss_vals = df_comparison['Hamming Loss'].tolist()\n",
+    "        # Recall@5 comparison\n",
+    "        recall_at_5 = df_comparison['Recall@5'].tolist()\n",
     "        \n",
-    "        axes[1].bar(x, hamming_loss_vals, alpha=0.8, color='coral')\n",
+    "        axes[1].bar(x, recall_at_5, alpha=0.8, color='coral')\n",
     "        axes[1].set_xlabel('Strategy')\n",
-    "        axes[1].set_ylabel('Hamming Loss (lower is better)')\n",
-    "        axes[1].set_title('Hamming Loss Comparison')\n",
+    "        axes[1].set_ylabel('Recall@5 (Top-5 Coverage)')\n",
+    "        axes[1].set_title('Recall@5 Comparison')\n",
     "        axes[1].set_xticks(x)\n",
     "        axes[1].set_xticklabels(strategies, rotation=45, ha='right')\n",
     "        axes[1].grid(axis='y', alpha=0.3)\n",
@@ -1442,12 +1441,14 @@
     "        results = data['results']\n",
     "        comparison_data.append({\n",
     "            'Strategy': strategy_name,\n",
+    "            'mAP': results.get('mean_average_precision', 0),\n",
     "            'Micro_F1': results.get('micro_f1', 0),\n",
     "            'Recall_at_5': results.get('recall_at_5', 0),\n",
     "            'Precision_at_5': results.get('precision_at_5', 0),\n",
     "            'Recall_at_10': results.get('recall_at_10', 0),\n",
     "            'Precision_at_10': results.get('precision_at_10', 0),\n",
-    "            'Example_Based_Accuracy': results.get('example_based_accuracy', 0)\n",
+    "            'Hamming_Loss': results.get('hamming_loss', 0),\n",
+    "            'Subset_Accuracy': results.get('example_based_accuracy', 0)\n",
     "        })\n",
     "    \n",
     "    df_comparison = pd.DataFrame(comparison_data)\n",
@@ -1506,7 +1507,7 @@
     "\n",
     "**Test Sırası:**\n",
     "1. **Baseline** - Her zaman ilk olarak çalıştırın (referans performans)\n",
-    "2. **Weighted BCE** - En umut verici strateji, Micro F1 > 0.10 bekleniyor\n",
+    "2. **Weighted BCE** - En umut verici strateji\n",
     "3. **Classifier Chain** - Label dependency avantajı test et\n",
     "4. Weighted BCE başarılı olursa → Bitti, kullan!\n",
     "5. Classifier Chain daha iyiyse → Multi-label yaklaşım kazandı!\n",
@@ -1515,28 +1516,22 @@
     "8. Hepsi başarısız olursa → **Top-100** ile model öğrenme kapasitesini kontrol et\n",
     "\n",
     "**Başarı Kriterleri:**\n",
+    "- **mAP > 0.20** → İyi sıralama kalitesi (en önemli metrik!)\n",
     "- Micro F1 > 0.15 → İyi performans\n",
     "- Recall@5 > 0.30 → Çok iyi performans\n",
     "- Hamming Loss < 0.10 → İyi performans\n",
-    "- Micro F1 < 0.10 → Strateji işe yaramadı\n",
     "\n",
-    "**Beklenen Performans (Strategy Karşılaştırması):**\n",
-    "```\n",
-    "Strategy          | Micro F1 | Hamming Loss | Recall@5 | Training Time\n",
-    "------------------|----------|--------------|----------|---------------\n",
-    "Baseline BCE      | ~0.00    | ~0.02        | ~0.13    | 30 min\n",
-    "Weighted BCE      | ~0.10    | ~0.12        | ~0.79    | 30 min ⭐\n",
-    "Focal γ=2         | ~0.00    | ~0.02        | ~0.15    | 30 min\n",
-    "Focal γ=5         | ~0.19    | ~0.03        | ~0.50    | 30 min\n",
-    "Classifier Chain  | ???      | ???          | ???      | 45-60 min 🆕\n",
-    "```\n",
-    "\n",
-    "**Metrikler:**\n",
-    "- **Micro F1:** Genel performans (threshold-based)\n",
-    "- **Hamming Loss:** Yanlış tahmin edilen label oranı (0=perfect, düşük=iyi)\n",
-    "- **Recall@5:** Top-5 tahmin içinde kaç doğru label var\n",
+    "**Metrikler (SOC Analyst Perspektifi):**\n",
+    "- **mAP (Mean Average Precision):** Sıralama kalitesi - doğru TTP'leri listenin tepesine koyma başarısı\n",
+    "  - Bu bir öneri sistemidir: Analist top-N tahmini inceler\n",
+    "  - mAP tüm sıralamayı değerlendirir (Recall@K'dan daha kapsamlı)\n",
+    "  - Örnek: 4 doğru TTP varsa, bunları 1-2-3-4. sıralarda görmek istersiniz\n",
+    "  \n",
+    "- **Recall@5:** Top-5 tahmin içinde kaç doğru TTP var\n",
     "- **Precision@5:** Top-5 tahminlerin kaçı doğru\n",
-    "- **Example-Based Accuracy:** Tüm label'ların tam eşleşmesi (çok strict)\n",
+    "- **Micro F1:** Genel performans (threshold-based)\n",
+    "- **Hamming Loss:** Yanlış tahmin edilen label oranı (düşük=iyi)\n",
+    "- **Subset Accuracy:** Tüm label'ların tam eşleşmesi (çok strict)\n",
     "\n",
     "**ClassifierChain Detayları:**\n",
     "- **Nasıl çalışır:** \n",
@@ -1557,15 +1552,16 @@
     "\n",
     "**Süre:**\n",
     "- Strategy 1-4: ~30-45 dakika\n",
-    "- Strategy 6 (Classifier Chain): ~45-60 dakika (embedding extraction + 499 binary classifiers)\n",
+    "- Strategy 6 (Classifier Chain): ~45-60 dakika\n",
     "- Strategy 5 (Top-K): ~2-2.5 saat (5 model)\n",
+    "- Hybrid strategies: ~15-20 dakika each (tree optimized)\n",
     "\n",
     "**Hatırlatmalar:**\n",
     "- Her strateji hücresi bağımsızdır, istediğiniz sırada çalıştırabilirsiniz\n",
     "- Sonuçlar `all_test_results` dictionary'sinde saklanır\n",
     "- Comparison hücresini dilediğiniz zaman çalıştırıp ara sonuçlara bakabilirsiniz\n",
     "- CTI-BERT ilk indirilirken cache'lenir, sonraki çalıştırmalar hızlıdır\n",
-    "- Classifier Chain için sklearn yüklü olmalı (Colab'da default olarak var)"
+    "- **mAP metriği eklendi** - sıralama kalitesini ölçer (SOC analyst use case)"
    ]
   }
  ],
