--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -1754,27 +1754,32 @@
     "print(f\"🧪 AUG-2: IoC Replacement\")\n",
     "print(f\"{'='*60}\\n\")\n",
     "\n",
-    "# Apply IoC replacement to training data\n",
-    "print(\"🔄 Applying IoC replacement to training data...\")\n",
-    "augmented_texts = []\n",
-    "for i in range(len(train_dataset)):\n",
-    "    original_text = train_dataset.encodings['input_ids'][i]\n",
-    "    # Decode to text\n",
-    "    text = train_dataloader.dataset.encodings.tokens[i] if hasattr(train_dataloader.dataset.encodings, 'tokens') else \"\"\n",
-    "    \n",
-    "    # For simplicity, we'll create augmented samples by replacing IoCs in raw texts\n",
-    "    # This requires re-tokenization\n",
-    "    pass\n",
-    "\n",
-    "# Alternative approach: Create augmented dataset from raw data\n",
+    "# Load raw dataset for text augmentation\n",
+    "print(\"🔄 Loading raw dataset for IoC replacement...\")\n",
     "from datasets import load_dataset\n",
+    "import ast\n",
+    "\n",
     "raw_dataset = load_dataset(\"tumeteor/Security-TTP-Mapping\")\n",
     "train_df = raw_dataset['train'].to_pandas()\n",
+    "\n",
+    "# Find text column\n",
+    "print(f\"Available columns: {train_df.columns.tolist()}\")\n",
+    "possible_text_cols = ['description', 'text', 'content', 'sentence']\n",
+    "text_column = None\n",
+    "for col in possible_text_cols:\n",
+    "    if col in train_df.columns:\n",
+    "        text_column = col\n",
+    "        break\n",
+    "\n",
+    "if text_column is None:\n",
+    "    raise ValueError(f\"No text column found! Available: {train_df.columns.tolist()}\")\n",
+    "\n",
+    "print(f\"Using text column: {text_column}\")\n",
     "\n",
     "# Apply IoC replacement to texts\n",
     "print(\"Replacing IoCs in training texts...\")\n",
     "augmented_train_texts = []\n",
-    "for text in train_df['text'].fillna('').tolist():\n",
+    "for text in train_df[text_column].fillna('').tolist():\n",
     "    # Original + 2 IoC-replaced versions\n",
     "    augmented_train_texts.append(text)  # Original\n",
     "    augmented_train_texts.append(replace_iocs(text, seed=42))  # Aug 1\n",
@@ -1794,11 +1799,10 @@
     "    augmented_train_labels.append(labels)  # Aug 1\n",
     "    augmented_train_labels.append(labels)  # Aug 2\n",
     "\n",
-    "print(f\"Original samples: {len(train_df)}\")\n",
-    "print(f\"Augmented samples: {len(augmented_train_texts)} (3x augmentation)\")\n",
+    "print(f\"✅ Original samples: {len(train_df)}\")\n",
+    "print(f\"✅ Augmented samples: {len(augmented_train_texts)} (3x augmentation)\")\n",
     "\n",
     "# Prepare augmented data\n",
-    "from src.data_loader import prepare_data\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
     "# Create custom dataset\n",
@@ -1978,14 +1982,14 @@
     "print(f\"🔄 Applying back-translation to {num_to_augment} samples...\")\n",
     "\n",
     "# Create augmented dataset\n",
-    "augmented_train_texts = train_df['text'].fillna('').tolist()\n",
+    "augmented_train_texts = train_df[text_column].fillna('').tolist()\n",
     "augmented_train_labels = train_labels_raw.copy()\n",
     "\n",
     "# Load translation models (lazy loading)\n",
     "back_translate_cached = {}\n",
     "\n",
     "for idx in samples_to_augment:\n",
-    "    original_text = train_df.iloc[idx]['text']\n",
+    "    original_text = train_df.iloc[idx][text_column]\n",
     "    if pd.isna(original_text) or len(original_text.strip()) < 10:\n",
     "        continue\n",
     "    \n",
@@ -2153,6 +2157,20 @@
     "raw_dataset = load_dataset(\"tumeteor/Security-TTP-Mapping\")\n",
     "train_df = raw_dataset['train'].to_pandas()\n",
     "\n",
+    "# Find text column\n",
+    "print(f\"Available columns: {train_df.columns.tolist()}\")\n",
+    "possible_text_cols = ['description', 'text', 'content', 'sentence']\n",
+    "text_column = None\n",
+    "for col in possible_text_cols:\n",
+    "    if col in train_df.columns:\n",
+    "        text_column = col\n",
+    "        break\n",
+    "\n",
+    "if text_column is None:\n",
+    "    raise ValueError(f\"No text column found! Available: {train_df.columns.tolist()}\")\n",
+    "\n",
+    "print(f\"Using text column: {text_column}\")\n",
+    "\n",
     "# Parse labels\n",
     "import ast\n",
     "train_labels_raw = train_df['labels'].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x).tolist()\n",
@@ -2161,7 +2179,7 @@
     "print(\"🔄 Applying combined augmentation (IoC + Back-translation + Oversampling)...\")\n",
     "\n",
     "# Get training texts\n",
-    "train_texts = train_df['text'].fillna('').tolist()\n",
+    "train_texts = train_df[text_column].fillna('').tolist()\n",
     "\n",
     "# Apply combined augmentation\n",
     "augmented_texts, augmented_labels = augment_tail_samples(\n",
@@ -2292,10 +2310,10 @@
     "print(f\"✅ AUG-4 TAMAMLANDI: {strategy_name}\")\n",
     "print(\"=\"*60)\n",
     "print(f\"\\n📈 Sonuçlar:\")\n",
-    "for metric, value in test_results.items():\n",
-    "    if isinstance(value, (int, float)):\n",
-    "        print(f\"   {metric}: {value:.4f}\")\n",
-    "print(\"\\n\")"
+    "\n",
+    "for metric, value in test_results.items():print(\"\\n\")\n",
+    "\n",
+    "    if isinstance(value, (int, float)):        print(f\"   {metric}: {value:.4f}\")"
    ]
   },
   {
