Optimize: Reduce back-translation ratio from 30% to 15% for faster execution

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -1764,7 +1764,7 @@
     "\n",
     "# Find text column\n",
     "print(f\"Available columns: {train_df.columns.tolist()}\")\n",
-    "possible_text_cols = ['description', 'text', 'content', 'sentence']\n",
+    "possible_text_cols = ['text1', 'description', 'text', 'content', 'sentence']\n",
     "text_column = None\n",
     "for col in possible_text_cols:\n",
     "    if col in train_df.columns:\n",
@@ -1973,10 +1973,10 @@
     "\n",
     "print(f\"📊 Samples with tail TTPs: {len(tail_sample_indices)} / {len(train_df)}\")\n",
     "\n",
-    "# Apply back-translation to 30% of tail samples\n",
+    "# Apply back-translation to 15% of tail samples (faster)\n",
     "import random\n",
     "random.seed(42)\n",
-    "num_to_augment = int(len(tail_sample_indices) * 0.3)\n",
+    "num_to_augment = int(len(tail_sample_indices) * 0.15)\n",
     "samples_to_augment = random.sample(tail_sample_indices, num_to_augment)\n",
     "\n",
     "print(f\"🔄 Applying back-translation to {num_to_augment} samples...\")\n",
@@ -2159,7 +2159,7 @@
     "\n",
     "# Find text column\n",
     "print(f\"Available columns: {train_df.columns.tolist()}\")\n",
-    "possible_text_cols = ['description', 'text', 'content', 'sentence']\n",
+    "possible_text_cols = ['text1', 'description', 'text', 'content', 'sentence']\n",
     "text_column = None\n",
     "for col in possible_text_cols:\n",
     "    if col in train_df.columns:\n",
@@ -2188,7 +2188,7 @@
     "    tail_threshold=10,\n",
     "    oversample_factor_range=(3, 10),\n",
     "    ioc_replacement_prob=1.0,  # Apply IoC replacement to all augmented samples\n",
-    "    back_translation_prob=0.3,  # Back-translate 30% of tail samples\n",
+    "    back_translation_prob=0.15,  # Back-translate 15% of tail samples (faster)\n",
     "    back_translation_pivot='de',\n",
     "    seed=42\n",
     ")\n",
